--- a/start.html
+++ b/start.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,12 @@
     <title>My-Second-Repo</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>My-Second-Repo</h1>
     <h2>New START file</h2>
     <p>My start.html file is not index.html file</p>
+    <p>Adding new paragraph</p>
 </body>
+
 </html>
